--- a/src/components/connect/connect.css
+++ b/src/components/connect/connect.css
@@ -59,3 +59,11 @@ top: 201px; */
   background: green;
   color: white;
 }
+.prevBtn {
+  background: black;
+  color: white;
+  border-radius: 10p 2px 10px 2px;
+  border: 1px solid gray;
+  height: 50px;
+  margin: 5px 0px;
+}
